--- a/action.yml
+++ b/action.yml
@@ -16,5 +16,7 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - run: ls ${{ github.action_path }}
+      shell: bash
     - run: ${{ github.action_path }}/get_license.sh ${{ inputs.license-type }} ${{ inputs.email }} \"${{ inputs.name }}\"
       shell: bash
