--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,5 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: ls ${{ github.action_path }}
-      shell: bash
-    - run: ${{ github.action_path }}/get_license.sh ${{ inputs.license-type }} ${{ inputs.email }} \"${{ inputs.name }}\"
+    - run: ${GITHUB_ACTION_PATH}/get_license.sh ${{ inputs.license-type }} ${{ inputs.email }} \"${{ inputs.name }}\"
       shell: bash
